internal/parser/y.output

state 0
	$accept: .S $end 

	kPARSER  shift 6
	.  error

	spec  goto 2
	sections  goto 3
	section  goto 4
	parser  goto 5
	S  goto 1

state 1
	$accept:  S.$end 

	$end  accept
	.  error


state 2
	S:  spec.    (1)

	.  reduce 1 (src line 48)


state 3
	spec:  sections.    (2)
	sections:  sections.section 

	kPARSER  shift 6
	.  reduce 2 (src line 50)

	section  goto 7
	parser  goto 5

state 4
	sections:  section.    (4)

	.  reduce 4 (src line 53)


state 5
	section:  parser.    (5)

	.  reduce 5 (src line 56)


state 6
	parser:  kPARSER.rules_opt 
	rules_opt: .    (10)

	ID  shift 11
	.  reduce 10 (src line 82)

	rules  goto 9
	rules_opt  goto 8
	rule  goto 10

state 7
	sections:  sections section.    (3)

	.  reduce 3 (src line 52)


state 8
	parser:  kPARSER rules_opt.    (6)

	.  reduce 6 (src line 58)


state 9
	rules:  rules.rule 
	rules_opt:  rules.    (9)

	ID  shift 11
	.  reduce 9 (src line 81)

	rule  goto 12

state 10
	rules:  rule.    (8)

	.  reduce 8 (src line 73)


state 11
	rule:  ID.'=' productions '.' 

	'='  shift 13
	.  error


state 12
	rules:  rules rule.    (7)

	.  reduce 7 (src line 66)


state 13
	rule:  ID '='.productions '.' 

	ID  shift 19
	LITERAL  shift 20
	.  error

	productions  goto 14
	production  goto 15
	qterms  goto 16
	qterm  goto 17
	term  goto 18

state 14
	rule:  ID '=' productions.'.' 
	productions:  productions.'|' production 

	'.'  shift 21
	'|'  shift 22
	.  error


state 15
	productions:  production.    (13)

	.  reduce 13 (src line 101)


state 16
	production:  qterms.label_opt 
	qterms:  qterms.qterm 
	label_opt: .    (27)

	ID  shift 19
	LITERAL  shift 20
	'#'  shift 26
	.  reduce 27 (src line 164)

	qterm  goto 24
	term  goto 18
	label  goto 25
	label_opt  goto 23

state 17
	qterms:  qterm.    (16)

	.  reduce 16 (src line 125)


state 18
	qterm:  term.qualifier_opt 
	qualifier_opt: .    (24)

	'*'  shift 29
	'+'  shift 30
	'?'  shift 31
	.  reduce 24 (src line 152)

	qualifier  goto 28
	qualifier_opt  goto 27

state 19
	term:  ID.    (18)

	.  reduce 18 (src line 142)


state 20
	term:  LITERAL.    (19)

	.  reduce 19 (src line 143)


state 21
	rule:  ID '=' productions '.'.    (11)

	.  reduce 11 (src line 85)


state 22
	productions:  productions '|'.production 

	ID  shift 19
	LITERAL  shift 20
	.  error

	production  goto 32
	qterms  goto 16
	qterm  goto 17
	term  goto 18

state 23
	production:  qterms label_opt.    (14)

	.  reduce 14 (src line 109)


state 24
	qterms:  qterms qterm.    (15)

	.  reduce 15 (src line 118)


state 25
	label_opt:  label.    (26)

	.  reduce 26 (src line 163)


state 26
	label:  '#'.ID 

	ID  shift 33
	.  error


state 27
	qterm:  term qualifier_opt.    (17)

	.  reduce 17 (src line 133)


state 28
	qualifier_opt:  qualifier.    (23)

	.  reduce 23 (src line 151)


state 29
	qualifier:  '*'.    (20)

	.  reduce 20 (src line 146)


state 30
	qualifier:  '+'.    (21)

	.  reduce 21 (src line 147)


state 31
	qualifier:  '?'.    (22)

	.  reduce 22 (src line 148)


state 32
	productions:  productions '|' production.    (12)

	.  reduce 12 (src line 94)


state 33
	label:  '#' ID.    (25)

	.  reduce 25 (src line 155)


16 terminals, 18 nonterminals
28 grammar rules, 34/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
67 working sets used
memory: parser 26/240000
0 extra closures
18 shift entries, 1 exceptions
21 goto entries
5 entries saved by goto default
Optimizer space used: output 35/240000
35 table entries, 0 zero
maximum spread: 15, maximum offset: 22
